--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-
+<% include ../partials/navbar %>
   <!-- the classes 'page-header' and 'btn btn-default' create bootstrap components.  -->
   <!-- Check out more components here: http://getbootstrap.com/components/ -->
   <div class="page-header">
